--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="author"content="Raika Gomes e Gabriella Lorandos">
     <meta name="description" content= "Site para se previnir e cuidar da ansiedade.">
     <meta name="keywords" content="Ansiedade, saúde e bem estar.">
-    <link rel="icon" href="assets/img/04.jpg">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/all.css">
+    <link rel="icon" href="04.jpg">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="all.css">
     </head>  
     <nav> 
         
@@ -40,7 +40,7 @@
 A ansiedade é um distúrbio psicológico que apresenta múltiplos sintomas, e entre os mais conhecidos, está o medo do que ainda não aconteceu. Ela pode afetar nossa rotina, já que, em muitos casos, a doença nos paralisa e nos faz deixar de tomar decisões por uma preocupação excessiva.
 
  </p>  
-     <img src="assets/img/01.jpg" width="300px".>
+     <img src="01.jpg" width="300px".>
     </nav>
 </div>
     
