--- a/controlação.html
+++ b/controlação.html
@@ -7,9 +7,9 @@
     <meta name="author"content="Raika Gomes e Gabriella Lorandos">
     <meta name="description" content= "Site para se cuidar e previnir da ansiedade.">
     <meta name="keywords" content="Ansiedade, saúde e bem estar.">
-    <link rel="icon" href="assets/img/04.jpg">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/all.css">
+    <link rel="icon" href="04.jpg">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="all.css">
     </head>  
     <nav> 
         
